rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__aggregating_cross_cube_measure_with_fanout_dim.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/combinations.rs
assertion_line: 431
expression: result
---
returns__reason | orders__customer_lifetime_per_order
----------------+------------------------------------
defective       | 10000.00                           
not_needed      | NULL                               
wrong_item      | 6000.00                            
NULL            | 1500.00
