rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__empty_result_from_filters.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
(empty result)
