rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__join_chain_with_filters_at_each_level.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
products__name | order_items__count | order_items__total_quantity
---------------+--------------------+----------------------------
Laptop         | 2                  | 4                          
Phone          | 1                  | 2
