rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__multi_fact_with_segment_filter_dimension.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
customers__name | orders__count | returns__count
----------------+---------------+---------------
Alice           | 2             | 1             
Diana           | 1             | 0
