rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__multiplied_with_join_filter_segment_time.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
customers__name | orders__created_at_month | customers__count | orders__count
----------------+--------------------------+------------------+--------------
Alice           | 2025-03-01 00:00:00      | 1                | 2            
Diana           | 2025-03-01 00:00:00      | 1                | 1
