rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__multiplied_with_subquery_dim.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
customers__total_spend | customers__name | sales__total_amount | customers__count
-----------------------+-----------------+---------------------+-----------------
130.00                 | Alice           | 500.00              | 1               
40.00                  | Bob             | 150.00              | 1               
200.00                 | Charlie         | 500.00              | 1               
NULL                   | Diana           | 100.00              | 1
