rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__order_limit_with_multi_fact.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
customers__name | orders__count | returns__count
----------------+---------------+---------------
Alice           | 4             | 1             
Bob             | 3             | 2
