rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__subquery_dim_filter_with_time_range.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
orders__created_at_month | orders__total_amount
-------------------------+---------------------
2025-03-01 00:00:00      | 300.00
