rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__combinations__ungrouped_with_filter_and_join.snap
---
source: cubesqlplanner/src/tests/integration/combinations.rs
expression: result
---
orders__id | orders__status | customers__name | orders__count
-----------+----------------+-----------------+--------------
1          | completed      | Alice Johnson   | 1            
2          | completed      | Alice Johnson   | 1            
6          | completed      | Alice Cooper    | 1            
7          | pending        | Alice Cooper    | 1
